# yourrag

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE-ADDITIONAL.md  MERGE.md  NOTICE  README.md  codecov.yml  go.mod  pyproject.toml
.github/: SECURITY.md  dependabot.yml  pull_request_template.md
.github/workflows/: codeql.yml  dependabot-auto-merge.yml  regen-lockfiles.yml  release.yml  repo-contract-ci.yml  sbom.yml  tests.yml
admin/client/: pyproject.toml  ragflow_cli.py  ragflow_client.py  user.py
admin/server/: auth.py  config.py  routes.py  services.py
agent/tools/: exesql.py
api/: constants.py
api/apps/: __init__.py  connector_app.py  system_app.py  system_metrics.py
api/db/: init_data.py
api/utils/: api_utils.py  configs.py  crypt.py
cmd/: admin_server.go  ragflow_cli.go  server_main.go
common/: config_watcher.py  constants.py  http_client.py  settings.py
common/data_source/: box_connector.py  interfaces.py
conf/: private.pem.example  public.pem.example  service_conf.yaml
docker/: .env  .env.example  .env.local.lite.example  README.md  docker-compose-CN-oc9.yml  docker-compose-base.yml  docker-compose-macos.yml  docker-compose.otel.yml  docker-compose.yml  es-ilm-policy.json  otel-config.yaml  prometheus.yml  service_conf.yaml.template
docker/nginx/: nginx.conf  (+1 more)
docs/: ENGINEERING_QUALITY.md  issue-pr-plan-2025.md
grafana/: yourrag-dashboard.json
helm/: Chart.yaml  values.yaml
tests/: repo_contract_test.sh
web/: .env.local.lite.example  index.html  package-lock.json  package.json
yourrag_gateway/: __init__.py  main.py
(+269 files in other folders)
